# DJI_ws

./: .gitignore  CRC8_CRC16.c  ros_cmd_demo.c
dji_driver/: CMakeLists.txt
dji_driver/config/: dji_driver_params.yaml
dji_driver/include/dji_driver/: dji_driver_node.hpp  dji_protocol.hpp
dji_driver/launch/: dji_driver.launch.py
dji_driver/src/: CRC8_CRC16.c  dji_driver_node.cpp  dji_protocol.cpp
install/: local_setup.sh  setup.sh
install/DJI_Driver/share/DJI_Driver/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dji_driver/lib/dji_driver/: dji_driver_node
install/dji_driver/share/ament_index/resource_index/parent_prefix_path/: dji_driver
install/dji_driver/share/dji_driver/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dji_driver/share/dji_driver/config/: dji_driver_params.yaml
install/serial/share/serial/: package.sh
log/: latest_build
src/dji_driver/: CMakeLists.txt  README.md  package.xml
src/dji_driver/config/: dji_driver_params.yaml
src/dji_driver/include/dji_driver/: CRC8_CRC16.h  dji_protocol.hpp
src/dji_driver/launch/: dji_driver.launch.py
src/dji_driver/src/: dji_driver_node.cpp
src/dji_receiver/: CMakeLists.txt  package.xml
src/dji_receiver/config/: params.yaml
src/dji_receiver/include/dji_receiver/: CRC8_CRC16.h  protocol.h
src/dji_receiver/launch/: dji_receiver.launch.py
src/dji_receiver/src/: CRC8_CRC16.c  dji_receiver_node.cpp
src/encoder_receiver/: CMakeLists.txt  README.md  package.xml
src/encoder_receiver/launch/: dji_encoder_receiver.launch.py
src/encoder_receiver/scripts/: test_serial_protocol.py
src/encoder_receiver/src/: dji_encoder_receiver_node.cpp
